tests/NormalTests/paczka1/small_fuzzy/99807860.err
Error in line 1: A328 A205 11,2
Error in line 11: MzDo A328 31,7
Error in line 12: MzDo A205 18,3
Error in line 3: A328 A328 34,6
